# template_gold_refinement

./: .gitignore  .zenodo.json  AGENTS.md  CITATION.cff  README.md  STANDALONE.md  TODO.md  codemeta.json  domain_profile.yaml  experiment_plan.yaml  index.html  manuscript__01_introduction.html  manuscript__05_conclusion.html  manuscript__06_reproducibility.html  manuscript__08_evaluation.html  manuscript__09_authoring_contract.html  pyproject.toml
data/: AGENTS.md  README.md  claim_ledger.yaml
docs/: AGENTS.md  README.md  agent_instructions.md  architecture.md  domain_fork_guide.md  faq.md  output_conventions.md  pre_1800_metallurgy_sources.md  quickstart.md  style_guide.md  syntax_guide.md  testing_philosophy.md  troubleshooting.md  validation_gates.md
manuscript/: 00_abstract.md  01_introduction.md  02_methodology.md  03_results.md  04_discussion.md  05_conclusion.md  06_reproducibility.md  07_scope.md  08_evaluation.md  09_authoring_contract.md  AGENTS.md  README.md  SYNTAX.md  config.yaml  config.yaml.example  layer_contract.yaml  preamble.md
output/: dashboard.html
scripts/: AGENTS.md  README.md  refinement_analysis.py  z_generate_manuscript_variables.py  zz_generate_cover_visualization.py
src/: AGENTS.md  README.md  __init__.py  assay.py  coercion.py  composition.py  config.py  cover_visualization.py  dashboard.py  domain_adapter.py  evidence.py  figures.py  formalisms.py  integrity.py  manuscript_variables.py  parsing.py  pipeline_policy.py  purity.py  refinery.py  security_assay.py  seed_sensitivity.py
tests/: AGENTS.md  README.md  conftest.py  (+24 more)
(+64 files in other folders)
